# protobuf-java-leo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  configure.sh  createDebugInput.sh  createMissingFilesForDiff.sh  generate.sh  gpghack.sh  main.cpp  mergeFromGoogle.sh  protobuf_commit.txt  runAsDocker.sh  tests.sh
.github/workflows/: build.yml
docker/: compileGrpc.sh
docker/protoc/: Dockerfile
docker/protoc-mac/: Dockerfile
fetch/: protoc_commit.txt
java/: .gitignore  pom.xml  settings.xml
java/src/main/java/com/google/protobuf/: AbstractMessage.java  AbstractMessageLite.java  AbstractParser.java  ArrayDecoders.java  BinaryReader.java  ByteString.java  CodedInputStream.java  CodedInputStreamReader.java  CodedOutputStream.java  CodedOutputStreamWriter.java  Descriptors.java  DiscardUnknownFieldsParser.java  DynamicMessage.java  ExtensionRegistry.java  FieldSet.java  GeneratedMessageLite.java  GeneratedMessageV3.java  Internal.java  MapEntry.java  MapEntryLite.java  Message.java  MessageLite.java  MessageReflection.java  MessageSchema.java  MessageSetSchema.java  Parser.java  Protobuf.java  Reader.java  Schema.java  SchemaUtil.java  TextFormat.java  UnknownFieldSet.java  Writer.java
java/src/main/java/de/leohilbert/: GeneratedMessageLeo.java
java/src/main/java/de/leohilbert/proto/: GeneratedMessageLeo.java  ProtoEnum.java
java/src/main/proto/: addressbook.proto  test.proto
java/src/test/java/: ProtoLeoTest.java
java/src/test/java/com/example/custom/: CustomOwnerClass.java  CustomPersonMarkerInterface.java  CustomPhoneType.java
java/src/test/java/com/example/tutorial/: AddressBookCustom.java  PersonCustom.java  PhoneNumberCustom.java
java/src/test/java/com/google/protobuf/: AbstractMessageTest.java  AbstractProto3SchemaTest.java  AbstractSchemaTest.java  AnyTest.java  BinaryProtocolTest.java  CachedFieldSizeTest.java  CodedAdapterTest.java  CodedInputStreamTest.java  CodedOutputStreamTest.java  DecodeUtf8Test.java  DeprecatedFieldTest.java  DiscardUnknownFieldsTest.java  DynamicMessageTest.java  ExperimentalSerializationUtil.java  FieldPresenceTest.java  IsValidUtf8Test.java  IsValidUtf8TestUtil.java  LazyStringEndToEndTest.java  LiteralByteStringTest.java  MapTest.java  PackedFieldTest.java  ParseExceptionsTest.java  Proto3MessageFactory.java  Proto3MessageInfoFactory.java  Proto3SchemaTest.java  TypeRegistryTest.java  WrappersOfMethodTest.java
java/src/test/java/de/leohilbert/protoconverter/: ProtoConverter_COM_EXAMPLE_CUSTOM_CUSTOMOWNERCLASS.java  ProtoConverter_COM_EXAMPLE_CUSTOM_CUSTOMPHONETYPE.java  ProtoConverter_JAVA_UTIL_UUID.java
java/src/test/proto/: addressbook.proto  leo_options.proto  options.proto
protoc-gen-debug/: main.go
src/google/protobuf/compiler/java/: java_field.cc
src/google/protobuf/compiler/java_leo/: java_context.cc  java_context.h  java_doc_comment.cc  java_doc_comment.h  java_enum.cc  java_enum.h  java_enum_field.cc  java_enum_field.h  java_enum_field_lite.cc  java_enum_field_lite.h  java_enum_lite.cc  java_enum_lite.h  java_extension.cc  java_extension.h  java_extension_lite.cc  java_extension_lite.h  java_field.cc  java_field.h  java_file.cc  java_file.h  java_generator.cc  java_generator.h  java_generator_factory.cc  java_generator_factory.h  java_helpers.cc  java_helpers.h  java_map_field.cc  java_map_field.h  java_map_field_lite.cc  java_map_field_lite.h  java_message.cc  java_message.h  java_message_builder.cc  java_message_builder.h  java_message_builder_lite.cc  java_message_builder_lite.h  java_message_field.cc  java_message_field.h  java_message_field_lite.cc  java_message_field_lite.h  (+18 more)
src/javaleo/proto/: leo_options.pb.cc  leo_options.pb.h  options.pb.cc  options.pb.h
src/leo/proto/: leo_options.pb.cc  leo_options.pb.h
tests/actual/com/example/tutorial/: AddressBookProtos.java  PersonOrBuilder.java
tests/expected/com/example/tutorial/: AddressBook.java  AddressBookOrBuilder.java  AddressBookProtos.java  Person.java  PhoneType.java
tools/protoc-gen-custom-class/: main.go
(+4 files in other folders)
