cmake_minimum_required(VERSION 3.10)
project(protoc-gen-java-leo)

set(CMAKE_CXX_STANDARD 11)
set(LIB_PATH protoc/bin protoc/lib)

file(GLOB SRC "src/leo/proto/*" "src/google/protobuf/compiler/java_leo/*.cc")

add_executable(${CMAKE_PROJECT_NAME} ${SRC} ${CMAKE_SOURCE_DIR}/src/main.cpp)
if (APPLE)
    target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotobuf.dylib)
    target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotoc.dylib)
else ()
    if (UNIX)
        target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotobuf.a)
        target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotoc.a)
        target_link_libraries(${CMAKE_PROJECT_NAME} pthread)
    endif ()
endif ()
IF (WIN32)
    set(CMAKE_CXX_FLAGS_RELEASE "/MT")
    set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
    target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotobuf.lib)
    target_link_libraries(${CMAKE_PROJECT_NAME} ${CMAKE_SOURCE_DIR}/protoc/lib/libprotoc.lib)
endif ()

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE protoc/include)
target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE src)